[package]
name = "Amphoreus"
version = "0.1.0"
edition = "2024"
default-run = "Amphoreus"

[features]
default = []
desktop = ["dep:tauri"]
web-ui = [
    "dep:yew",
    "dep:gloo-timers",
    "dep:wasm-bindgen-futures",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
tauri = { version = "2.8.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
js-sys = { version = "0.3.77", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.52", optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }

[build-dependencies]
tauri-build = { version = "2.5.5" }
